remove spring-boot-admin & update dockerfile